# sparkinfer

./: .gitignore  CMakeLists.txt  README.md
.github/: COPYCATS.md  copycats.json
.gittensor/: weights.json
bench/scripts/: evaluate.sh
csrc/cuda/attention/: CMakeLists.txt  flash_decode.cu  flash_decode_global_hd512.cu  flash_decode_gqa8.cu  flash_decode_local_hd256.cu
csrc/cuda/fused/: CMakeLists.txt
csrc/cuda/gemm/: CMakeLists.txt
csrc/cuda/moe/: CMakeLists.txt
csrc/cuda/quant/: CMakeLists.txt
csrc/cute/moe_gemm/: CMakeLists.txt
csrc/cute/moe_swiglu/: CMakeLists.txt  group_gemm_swiglu.cu
dashboard/: data.js  data.json
eval/: pr_eval_bot.py
include/sparkinfer/kernels/: attention.h  gemm.h  moe.h
kernels/csrc/cuda/attention/: flash_prefill.cu
kernels/csrc/cuda/gemm/: gemv.cu
kernels/include/sparkinfer/kernels/: gemm.h
moe/src/: engine.cpp
results/: qwen3-30b-a3b_q4km_pro6000.md
runtime/src/: gguf.cpp
runtime/src/models/: qwen35.cpp
src/models/: qwen35.cpp
